# Cadmium-Cell-DEVS-Modified-Hoya-Model

./: .gitignore  CMakeLists.txt  README.md  main_hoya.cpp  scenario.json
automation/: README.md  analysis.py  notebook.py  runner.py  scenarios.py
automation/output/base_scenario/simulation_logs/: hoya_age.json
automation/scenarios/: base_scenario.json
config/: base_scenario.json  scenario.json
misc/: epidemic_plots_from_cd_log_hoya_death_cd_cadmium.ipynb  hoya_age.json
model/: hoya_cell.hpp  hoya_coupled.cpp  hoya_coupled.hpp  main.cpp
model/cell/: config.hpp  hoya_cell.hpp  hoya_config.hpp  lockdown.hpp  state.hpp  vicinity.hpp
old automation/: notebook.py  runner.py
simulation_results/: README.md
src/: main_hoya.cpp
